Enhance configuration and functionality in CodeScan
- Updated the example `.env` file to include new MCP server settings and test detection patterns.
- Refactored `codescan_mcp_server.py` to import test detection configurations from `codescan_lib`.
- Added new tools for analyzing function relationships and untested classes in the MCP server.
- Improved README documentation to reflect new features and usage instructions.
- Refactored tests to utilize the updated `codescan_lib` structure for better organization and clarity.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
-# Example .env file for codescan project
-
 # Neo4j Connection Settings
-NEO4J_USER=neo4j
-NEO4J_PASSWORD=demodemo
-NEO4J_PORT_HTTP=7400
-NEO4J_PORT_BOLT=7600
 NEO4J_HOST=localhost
+NEO4J_PORT_BOLT=7600
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=your_password_here
 
 # Project Settings
-PROJECT_DIR=/path/to/your/project
+PROJECT_DIR=.
+
+# MCP Server Settings
+DEBUG_MCP=false
+LOG_FILE=codescan_mcp_server.log
+MCP_SERVER_LOGGING_ENABLED=true
+
+# Test Detection Configuration
+TEST_DIR_PATTERNS=tests/,test/,testing/
+TEST_FILE_PATTERNS=test_*.py,*_test.py
+TEST_FUNCTION_PREFIXES=test_
+TEST_CLASS_PATTERNS=Test*,*Test
